# FEUP-AED-Schedules

./: .gitignore  CMakeLists.txt  README.md  main.cpp
aux_files/: classes.csv  classes_per_uc.csv  pending_requests.txt  students_classes.csv
definitions/: Class.cpp  ClassCourse.cpp  ClassSchedule.cpp  Course.cpp  IndependentFunctions.cpp  Request.cpp  Schedule.cpp  ScheduleManagement.cpp  Slot.cpp  Student.cpp  StudentNew.cpp  WeeklySchedule.cpp  functions.cpp
docs/: Doxyfile
docs/output/html/: Class_8cpp_source.html  Class_8h_source.html  Course_8cpp_source.html  Course_8h_source.html  Functions_8h.html  Functions_8h_source.html  IndependentFunctions_8cpp_source.html  IndependentFunctions_8h.html  IndependentFunctions_8h_source.html  Request_8cpp_source.html  Request_8h_source.html  Schedule_8cpp_source.html  Schedule_8h_source.html  Slot_8cpp_source.html  Slot_8h_source.html  Student_8cpp_source.html  Student_8h_source.html  Types_8h_source.html  annotated.html  classClass-members.html  classClass.html  classCourse-members.html  classCourse.html  classRequest-members.html  classRequest.html  classSchedule-members.html  classSchedule.html  classSlot-members.html  classSlot.html  classStudent-members.html  classStudent.html  classes.html  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.html  dir_bc1e4162ee83d3b96e351e029d62c4b5.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  index.html  (+23 more)
headers/: Class.h  ClassCourse.h  ClassSchedule.h  Course.h  Functions.h  IndependentFunctions.h  Request.h  Schedule.h  ScheduleManagement.h  Slot.h  Student.h  StudentNew.h  Types.h  WeeklySchedule.h  functions.h
(+70 files in other folders)
